# gha-buildx-poetry

./: CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.github/: release-drafter.yml
.github/actions/qa-tests/: Dockerfile
.github/workflows/: app.yml  app_run.yml  aws_deploy.yml  aws_deploy_production.yml  aws_deploy_sandbox.yml  aws_deploy_staging.yml  aws_deployment.yml  builder.yml  gha.yml  ghcr_maintenance.yml  ghcr_prune.yml  ghcr_prune_images.yml  main.yml  on_pull_request.yml  on_pull_request_type_closed.yml  on_push_main.yml  on_release.yml  on_release_published.yml  on_schedule_cleanup.yml  on_workflow_call_publish.yml  release_drafter.yml
app/: test_dummy.py
docker/image1/: Dockerfile  app_publish.sh  app_publisher.sh  app_tester.sh  docker_command_publish.sh  docker_command_release.sh  docker_command_test.sh
docker/image2/: Dockerfile
