[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.2"
boto3 = "^1.24.96"
boto3-stubs = {extras = ["ecr", "s3", "secretsmanager"], version = "^1.24.96"}
cryptography = "^38.0.1"
Django = "^4.1"
django-cors-headers = "^3.12.0"
django-filter = "^22.1"
django-leaflet = "^0.28.3"
django-storages = "^1.13.1"
djangorestframework = "^3.14.0"
djangorestframework-gis = "^1.0"
Fiona = "^1.8.22"
gunicorn = "^20.1.0"
jwcrypto = "^1.4.2"
lat-lon-parser = "^1.2.0"
psycopg2-binary = "^2.9.4"
PyJWT = "^2.6.0"
pyproj = "^3.4.0"
python = "^3.9"
requests = "^2.28.1"
Shapely = "^1.8.5"
tqdm = "^4.64.1"
uvicorn = "^0.19.0"
aws-cdk-lib = "^2.47.0"
constructs = "^10.1.138"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
